public/stylesheets/stylesheet.css
body
{
	margin: 0;
	padding: 0;
	font: 10pt Gill Sans, Sans-Serif;    
}

a       { color: #2D6C91; text-decoration: none; }
.pagecontentitem p a { text-decoration: underline; }
a:hover { text-decoration: underline; }

.tablecell
{
	width: 30px; padding-right: 5px; text-align: center;
}

.coloredtablecell
{
	width: 30px; padding-right: 5px; background-color: #DDDDDD; text-align: center;
}           

.tabledivider
{
	border-top: solid 1px #BBBBBB;
}

.moduletitle
{
	border-bottom: solid 1px #CCCCCC;
	font-weight: normal; font-size: 14pt;
	margin-top: 10px; margin-bottom: 10px
}

.modulesubtitle
{
	font-weight: normal; font-size: 12pt;
	margin-top: 15px; margin-bottom: 2px
}

.modulesubtitle a { text-decoration: none; }
.modulesubtitle a:hover { text-decoration: underline; }

#notice
{
	position: absolute;
	background-color: #AAFFAA;
	z-index: 3;
	left: 50%; top: 10px;
	padding: 5px;
	border: solid 1px green;
}       

#error
{
	position: absolute;
	background-color: #FFAAAA;
	z-index: 3;
	left: 10%; top: 80px;
	padding: 5px;
	border: solid 1px red;
}

#errorExplanation
{
	position: absolute;
	background-color: #FFAAAA;
	z-index: 3;
	left: 50%; top: 10px;
	padding: 5px;
	border: solid 1px red;
}
     
#banner
{
	position: absolute; top: 0px; width: 100%;      
	height: 69px;        
	background-color: #DAE0D2;	 	
}

#searchbox
{
	position: absolute; top: 20px; width: 20%; left: 80%;  
	height: 72px;     
}

#sitetitle
{
	font-size: 14pt; margin-left: 40px; margin-top: 5px; width: 800px;
}                                                                               

#menu
{                   
	position: absolute; top: 43px;
	min-width: 800px; 
	background-color: #DAE0D2;	 
}
         
ul, ol {list-style: none; margin: 0;}
ul.sortable {cursor: move}

#menu li
{
    background:url("/images/norm_left_trans.gif") no-repeat left top;
	
	text-align: left;   
	float: left;     
	padding:0 0 0 9px;
}             

#menu #current
{
    background-image:url("/images/norm_left_on_trans.gif")
}

#menu a
{                      
	float:left;                    
	display:block;
	background: url("/images/norm_right_trans.gif") no-repeat right top;
	padding:5px 15px 4px 6px;
	text-decoration: none;       
}                      

/* Commented Backslash Hack
    hides rule from IE5-Mac \*/
 #header a {float:none;}
 /* End IE5-Mac hack */

#menu #current a
{
    background-image:url("/images/norm_right_on_trans.gif");
    padding-bottom:5px;
}

#menu a:hover
{
	color: red;
	text-decoration: underline;
}

#pagetitle
{
	font: 14pt Gill Sans, Sans-Serif;
	padding-top: 15px;
	padding-bottom: 15px;
}

#pageheader
{
	margin-left: auto; 
	margin-right: auto;
	width: 760px;
/*	background-color: #ffffee; */
}                                             

.location-abbreviation
{
	color: green; font-style: italic;
}                          
 
.pageheaderitem
{
 	margin-left: 15px; margin-right: 15px; margin-bottom: 3px;
}

.pagecontentmodule .photo
{
	text-align: center; display: inline;
}

#pagebody
{
	min-height: 100%;
	padding-top: 68px;
	padding-bottom: 50px;
}

#pagecontent
{             
	margin-left: auto; 
	margin-right: auto;  
	background-color: white;
	width: 760px;
/*	border: solid 1px red; */
}

#pagecontent .pagecontentmodule
{
	margin-top: 10px;
	margin-bottom: 15px;
	margin-right: 10px;
}

#pagecontent .pagecontentitem
{
	margin-bottom: 1px;
}

#pagecontent .pagecontentitem .notes
{
	margin-bottom: 3px; margin-top: 2px; margin-right: 10px;
}

#bigphotoframe
{
	margin-left: auto; 
	margin-right: auto;
	width: 760px;
	padding-bottom: 5px;
/* 	border: solid 1px red; */
}

#bottombar
{
	position: fixed; bottom: -10px; width: 100%; height: 30px;
	font: 10pt Gill Sans, Sans-Serif;
	color: gray;
	background-color: #EEEEEE;
	border-top: solid 1px gray;
	z-index: 2;
	padding-left: 10px;
}   

.baritem
{                        
	padding-left: 10px;
	padding-right: 10px;   
	height: 30px;
	border-right: solid 1px gray;
	text-transform: lowercase;
}

